# mpihw

./: Makefile  README.md  matview.hpp  p1_hello.cpp  p2_sum.cpp  p3_deriv.cpp  p4_matmul.cpp  p5_gauss.cpp
src/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  CMakeLists.txt
